@@ -187,7 +187,7 @@
 			'settings' => 'darkelements_logo', 
 		) ) );
 		$wp_customize->add_section( 'darkelements_menu_title_section' , array( 	
-			'title' => __( 'Title', 'darkelements' ), 
+			'title' => __( 'Menu Title', 'darkelements' ), 
 			'priority' => 31, 
 			'description' => __( 'Change title displayed above the menu.', 'darkelements' ),
 		) );
@@ -196,7 +196,7 @@
 			'sanitize_callback' => 'sanitize_text_field', 
 		) ); 
 		$wp_customize->add_control( new WP_Customize_Control ( $wp_customize, 'darkelements_menu_title', array( 
-			'label' => __( 'Menu Title', 'darkelements' ), 
+			'label' => __( 'Title', 'darkelements' ), 
 			'description' => __( 'This will overwrite the default title.', 'darkelements' ), 
 			'section' => 'darkelements_menu_title_section', 
 			'settings' => 'darkelements_menu_title', 
